[package]
name = "bevy_map_camera"
version = "0.2.6"
edition = "2024"
description = "3D Camera Controller for Bevy"
authors = ["Oscar Rimsby <oscar.rimsby@mobilaris.se>"]
keywords = ["bevy", "camera"]
repository = "https://github.com/oscrim/bevy_map_camera"
rust-version = "1.85"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["bevy_easings", "bevy_tweening"]


[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

bevy_ecs = { version = "0.16.0", default-features = false }
bevy_transform = { version = "0.16.0", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_input = { version = "0.16", default-features = false }
bevy_window = { version = "0.16", default-features = false }
bevy_winit = { version = "0.16" }
bevy_log = { version = "0.16", default-features = false }
bevy_render = { version = "0.16", default-features = false }
bevy_state = { version = "0.16", default-features = false }
bevy_math = { version = "0.16", default-features = false }
bevy_core_pipeline = { version = "0.16", default-features = false }
bevy_reflect = { version = "0.16", default-features = false }
bevy_picking = { version = "0.16", default-features = false }
bevy_platform = { version = "0.16", default-features = false }

bevy_easings = { version = "0.16.0", optional = true }
bevy_tweening = { version = "0.13.0", optional = true, default-features = false }

[dependencies.approx]
version = "0.5"


[dev-dependencies]
bevy = { version = "0.16" }

[[example]]
name = "simple"

[[example]]
name = "easing"
required-features = ["bevy_easings"]

[[example]]
name = "tween"
required-features = ["bevy_tweening"]

[[example]]
name = "grab_height"
required-features = ["bevy_tweening"]
