[package]
name = "bevy_map_camera"
version = "0.4.0"
edition = "2024"
description = "3D Camera Controller for Bevy"
authors = ["Oscar Rimsby <oscar.rimsby@mobilaris.se>"]
keywords = ["bevy", "camera"]
repository = "https://github.com/oscrim/bevy_map_camera"
rust-version = "1.85"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["serde"]

easings = ["bevy_easings"]
tweening = ["bevy_tweening"]


[dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

bevy_app = { version = "0.17", default-features = false }
bevy_camera = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17.0", default-features = false }
bevy_input = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_picking = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17.0", default-features = false }
bevy_window = { version = "0.17", default-features = false }

bevy_easings = { version = "0.17.0", optional = true }
bevy_tweening = { version = "0.14.0", optional = true, default-features = false }


[dev-dependencies]
bevy = { version = "0.17" }

[[example]]
name = "simple"

[[example]]
name = "easing"
required-features = ["bevy_easings"]

[[example]]
name = "tween"
required-features = ["bevy_tweening"]

[[example]]
name = "grab_height"
required-features = ["bevy_tweening"]
